[gd_scene load_steps=20 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/progressBar.png" type="Texture" id=3]
[ext_resource path="res://sprites/endZone.png" type="Texture" id=4]
[ext_resource path="res://sprites/indicatorBG.png" type="Texture" id=5]
[ext_resource path="res://playerSprite.png" type="Texture" id=6]
[ext_resource path="res://sprites/timer.png" type="Texture" id=7]
[ext_resource path="res://sprites/indicatorE.png" type="Texture" id=8]
[ext_resource path="res://sprites/indicatorS.png" type="Texture" id=9]
[ext_resource path="res://sprites/indicatorC.png" type="Texture" id=10]
[ext_resource path="res://sprites/armfight.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Main.gd" type="Script" id=12]
[ext_resource path="res://sounds/drumbgm.wav" type="AudioStream" id=13]
[ext_resource path="res://Text.tres" type="Theme" id=14]
[ext_resource path="res://sprites/pauseButton.png" type="Texture" id=15]
[ext_resource path="res://pauseScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://gameOver.tscn" type="PackedScene" id=17]
[ext_resource path="res://Start.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 12 )

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 1250, 500 )
rotation = 3.14159
z_index = 1
width = 18
height = 9

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="TimerIndicator" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1186, 615 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -1188, -615 )

[node name="IndicatorBg" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="IndicatorC" type="Sprite" parent="IndicatorBg"]
visible = false
position = Vector2( -10, -5 )
texture = ExtResource( 10 )
centered = false

[node name="IndicatorE" type="Sprite" parent="IndicatorBg"]
visible = false
position = Vector2( 20, 0 )
scale = Vector2( 0.95, 1 )
texture = ExtResource( 8 )
centered = false

[node name="IndicatorS" type="Sprite" parent="IndicatorBg"]
texture = ExtResource( 9 )
centered = false

[node name="PlayerIcon" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="EndZone" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 4 )
centered = false

[node name="ProgressBar" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="progressBarRect" type="ColorRect" parent="ProgressBar"]
show_behind_parent = true
margin_left = 789.0
margin_top = 581.0
margin_right = 1070.0
margin_bottom = 642.0
color = Color( 1, 0, 0, 1 )

[node name="progressBarLabel" type="Label" parent="ProgressBar"]
margin_left = 878.0
margin_top = 592.0
margin_right = 1062.0
margin_bottom = 656.0
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 1 )
text = "0/1000"
align = 2

[node name="matchLabel" type="Label" parent="."]
margin_left = 449.0
margin_top = 589.0
margin_right = 706.0
margin_bottom = 685.0
theme = ExtResource( 14 )
text = "SHAPE"
align = 2

[node name="Timer2" type="Timer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer2" type="AudioStreamPlayer" parent="."]

[node name="bgmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0
autoplay = true

[node name="pauseButton" type="TextureButton" parent="."]
margin_left = 19.0
margin_top = 18.0
margin_right = 119.0
margin_bottom = 118.0
texture_normal = ExtResource( 15 )

[node name="pauseScreen" parent="." instance=ExtResource( 16 )]
visible = false

[node name="gameOver" parent="." instance=ExtResource( 17 )]
visible = false

[node name="Start" parent="." instance=ExtResource( 18 )]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="pauseButton" to="." method="pause"]
